renamed name of variables in lambda expression changed name of getIntOfPeriod method now it calculateYearsInUkraine changed some logic in getOddNumsAverage and getCatsNames methods removed Collectors.toList(), now just toList()